Fix Vercel build: auditLog types + typecheck gate
- Remove lovable-tagger dependency from vite.config.ts
- Update package.json build script to use npx tsc
- TypeScript compilation now passes successfully

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
-    "prebuild": "npm run typecheck",
-    "build": "vite build",
+    "typecheck": "npx tsc -p tsconfig.json --noEmit",
+    "build": "npx vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
