Add OmniLink portability matrix and DR guidance

--- a/.github/workflows/ci-runtime-gates.yml
+++ b/.github/workflows/ci-runtime-gates.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm run typecheck
 
       - name: ESLint
-        run: npm run lint || true  # Don't fail on warnings
+        run: npm run lint
 
       - name: React singleton check
         run: npm run check:react
