Gate Supabase integration tests on creds

--- a/.github/workflows/ci-runtime-gates.yml
+++ b/.github/workflows/ci-runtime-gates.yml
@@ -42,6 +42,11 @@ jobs:
       # ─────────────────────────────────────────────────────────────
       - name: Run unit tests
         run: npm test
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+          VITE_SUPABASE_PUBLISHABLE_KEY: ${{ secrets.VITE_SUPABASE_PUBLISHABLE_KEY }}
+          REQUIRE_SUPABASE_INTEGRATION_TESTS: "false"
 
       # ─────────────────────────────────────────────────────────────
       # PHASE 3: Build
