fix(ci): update secret scanning to use command-line exclusions
- Remove problematic .trufflehog.yaml config file
- Use --exclude-paths command-line argument for TruffleHog
- Exclude documentation files and examples from secret scanning
- Keep .gitleaks.toml for Gitleaks configuration

--- a/.github/workflows/secret-scanning.yml
+++ b/.github/workflows/secret-scanning.yml
@@ -31,7 +31,7 @@ jobs:
           path: ./
           base: ${{ github.event.repository.default_branch }}
           head: HEAD
-          extra_args: --only-verified --config .trufflehog.yaml
+          extra_args: --only-verified --exclude-paths="**/PRODUCTION_BLOCKERS_ANALYSIS.md,*.example,docs/**,.env.example,node_modules/**,.git/**,dist/**,build/**"
 
       - name: Scan with Gitleaks (backup scanner)
         uses: gitleaks/gitleaks-action@v2
