fix(ci): use temporary exclude file for TruffleHog scanning
- Create .trufflehog-exclude file with patterns to skip
- Update workflow to generate exclude file before scanning
- Use --exclude-paths=.trufflehog-exclude for reliable path exclusions

--- a/.github/workflows/secret-scanning.yml
+++ b/.github/workflows/secret-scanning.yml
@@ -24,6 +24,19 @@ jobs:
         with:
           fetch-depth: 0 # Full history for comprehensive scan
 
+      - name: Create TruffleHog exclude file
+        run: |
+          cat > .trufflehog-exclude << 'EOF'
+          **/PRODUCTION_BLOCKERS_ANALYSIS.md
+          *.example
+          docs/**
+          .env.example
+          node_modules/**
+          .git/**
+          dist/**
+          build/**
+          EOF
+
       - name: Run TruffleHog scan
         uses: trufflesecurity/trufflehog@main
         with:
@@ -31,7 +44,7 @@ jobs:
           path: ./
           base: ${{ github.event.repository.default_branch }}
           head: HEAD
-          extra_args: --only-verified --exclude-paths="**/PRODUCTION_BLOCKERS_ANALYSIS.md,*.example,docs/**,.env.example,node_modules/**,.git/**,dist/**,build/**"
+          extra_args: --only-verified --exclude-paths=.trufflehog-exclude
 
       - name: Scan with Gitleaks (backup scanner)
         uses: gitleaks/gitleaks-action@v2
