fix(ci): use proper regex patterns for TruffleHog exclusions
- Update exclude patterns to use proper regex instead of glob patterns
- Use anchored patterns (^ and $) for precise path matching
- Ensure TruffleHog can compile all regex patterns correctly

--- a/.github/workflows/secret-scanning.yml
+++ b/.github/workflows/secret-scanning.yml
@@ -27,14 +27,14 @@ jobs:
       - name: Create TruffleHog exclude file
         run: |
           cat > .trufflehog-exclude << 'EOF'
-          **/PRODUCTION_BLOCKERS_ANALYSIS.md
-          *.example
-          docs/**
-          .env.example
-          node_modules/**
-          .git/**
-          dist/**
-          build/**
+          PRODUCTION_BLOCKERS_ANALYSIS\.md$
+          \.example$
+          ^docs/
+          ^\.env\.example$
+          ^node_modules/
+          ^\.git/
+          ^dist/
+          ^build/
           EOF
 
       - name: Run TruffleHog scan
