feat: Harden APEX OmniHub orchestrator with portability, security, and compliance
 Portability Interface
- Add DatabaseProvider interface for future database backends
- Implement SupabaseDatabaseProvider maintaining existing semantics
- Refactor activities/tools.py to use provider pattern
- Add factory pattern for runtime provider selection

 Guardian Gate (Edge Security)
- Implement edge-first validation in guardian.ts
- Add OpenAI moderation API integration
- Optional intent sanity checking with GPT-4o-mini
- Content-type, size, and depth validation

 Audit Coverage
- Add structured audit events to all DB-touching activities
- Log success/failure with timing and resource identifiers
- Leverage existing AuditLogEntry schema for compliance

 Documentation Updates
- Remove Redlock references from architecture docs
- Add Temporal workflow serialization concurrency section
- Update implementation summary to reflect current approach

 CI Guardrails
- Add portability checks to prevent direct Supabase SDK usage
- Implement AST-based stub detection for provider implementations
- Update orchestrator-ci.yml with regression prevention

 All acceptance criteria satisfied:
- No direct Supabase SDK in orchestrator/activities/
- Edge guardian with moderation before expensive operations
- No Redlock references in docs
- Audit events on all DB operations
- CI blocks portability regressions

Environment variables added:
- OPENAI_API_KEY (for moderation)
- GUARDIAN_INTENT_CHECK_ENABLED (optional)
- DB_PROVIDER (defaults to supabase)

--- a/.github/workflows/orchestrator-ci.yml
+++ b/.github/workflows/orchestrator-ci.yml
@@ -51,6 +51,21 @@ jobs:
           ruff check .
           black --check .
 
+      - name: Check portability guardrails
+        run: |
+          # Fail if any Supabase SDK imports appear in orchestrator/activities
+          if grep -r "from supabase\|create_client\|supabase\." orchestrator/activities/ --include="*.py" | grep -v "__pycache__"; then
+            echo "❌ FAILED: Direct Supabase SDK usage found in orchestrator/activities/"
+            echo "All database operations must use the provider interface."
+            exit 1
+          else
+            echo "✅ PASSED: No direct Supabase SDK usage in activities"
+          fi
+
+      - name: Check for stubbed provider implementations
+        run: |
+          python scripts/ci/assert_no_stubbed_provider_impls.py
+
       - name: Run type checker
         working-directory: orchestrator
         run: |
