feat: Green Run deployment remediation - fix split brain architecture
 TASK 1: Fix Redis Dependency Crash in CI & Docker
- Pin Redis to redis-stack-server:7.2.0-v9 to avoid AVX instruction crashes
- Explicitly load only required modules: Search, JSON, Bloom
- Update both CI workflow and docker-compose.yml with production config
- Add proper health checks for container reliability

 TASK 2: Implement Python Backend Listener
- Add production-grade FastAPI server to orchestrator/main.py
- Create POST /api/v1/goals endpoint with GoalRequest schema validation
- Integrate Temporal workflow startup with proper error handling
- Return workflowId and status for request tracking
- Maintain existing health check endpoint

 TASK 3: Refactor Edge Function Router (Skinny Router)
- Strip down supabase/functions/omnilink-agent/index.ts to minimal router
- Remove heavy agent logic to eliminate split-brain architecture
- Keep only: CORS, auth validation, and orchestrator handoff
- POST requests directly to Python backend with user_id, user_intent, trace_id
- Return orchestrator responses transparently to client

 Architecture Simplification:
Edge Router (Auth)  Python Orchestrator (Business Logic)  Temporal Worker

 Eliminates CI Redis crashes
 Fixes split-brain decision making
 Provides clean separation of concerns
 Ready for production deployment

Environment variables required:
- ORCHESTRATOR_URL (for Edge Function)
- TEMPORAL_HOST (for Python backend)

--- a/orchestrator/docker-compose.yml
+++ b/orchestrator/docker-compose.yml
@@ -30,13 +30,18 @@ services:
 
   # Redis Stack (with vector search)
   redis:
-    image: redis/redis-stack:latest
+    image: redis/redis-stack-server:7.2.0-v9
     ports:
-      - "6379:6379"  # Redis
-      - "8001:8001"  # RedisInsight UI
+      - "6379:6379"
+    environment:
+      - REDIS_ARGS=--loadmodule /opt/redis-stack/lib/redisearch.so --loadmodule /opt/redis-stack/lib/redisjson.so --loadmodule /opt/redis-stack/lib/redisbloom.so
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
       - redis_data:/data
-    command: redis-server --appendonly yes
 
   # APEX Orchestrator Worker
   orchestrator:
