--- a/.github/workflows/orchestrator-ci.yml
+++ b/.github/workflows/orchestrator-ci.yml
@@ -19,7 +19,7 @@ jobs:
 
     services:
       redis:
-        image: redis/redis-stack:latest
+        image: redis/redis-stack-server:7.2.0-v9
         ports:
           - 6379:6379
         options: >-
@@ -27,6 +27,11 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+          --entrypoint redis-server
+        command: >-
+          --loadmodule /opt/redis-stack/lib/redisearch.so
+          --loadmodule /opt/redis-stack/lib/redisjson.so
+          --loadmodule /opt/redis-stack/lib/redisbloom.so
 
     steps:
       - name: Checkout code
