--- a/.github/workflows/deploy-web3-functions.yml
+++ b/.github/workflows/deploy-web3-functions.yml
@@ -22,11 +22,14 @@ jobs:
         with:
           version: latest
 
+      - name: Link to Supabase
+        env:
+          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+          SUPABASE_PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF }}
+        run: supabase link --project-ref $SUPABASE_PROJECT_REF
+
       - name: Deploy Edge Functions
         run: |
-          # Link to Supabase project
-          supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
-
           # Deploy all functions
           supabase functions deploy omnilink-agent --no-verify-jwt
           supabase functions deploy blockchain-verify --no-verify-jwt
