--- a/.github/workflows/orchestrator-ci.yml
+++ b/.github/workflows/orchestrator-ci.yml
@@ -71,9 +71,8 @@ jobs:
           python scripts/ci/assert_no_forbidden_sdk_imports.py
 
       - name: Run orchestrator tests
-        working-directory: orchestrator
         run: |
-          python -m pytest tests/ -v --tb=short
+          cd orchestrator && python -m pytest tests/ -v --tb=short
 
       - name: Run type checker
         working-directory: orchestrator
