Fix Python test execution by running from orchestrator directory
- Change test execution back to working-directory: orchestrator
- This ensures orchestrator package is properly imported in tests
- Fixes ModuleNotFoundError for orchestrator modules

--- a/.github/workflows/orchestrator-ci.yml
+++ b/.github/workflows/orchestrator-ci.yml
@@ -71,8 +71,9 @@ jobs:
           python scripts/ci/assert_no_forbidden_sdk_imports.py
 
       - name: Run orchestrator tests
+        working-directory: orchestrator
         run: |
-          cd orchestrator && python -m pytest tests/ -v --tb=short
+          python -m pytest tests/ -v --tb=short
 
       - name: Run type checker
         working-directory: orchestrator
