Revert "APEX OMNIHUB: System Ascension Protocol v3.0 - Security & Cleanup (#137)"
This reverts commit af934422af5344b60d167a1548cf33cc7f67dd19.

--- a/.github/workflows/chaos-simulation-ci.yml
+++ b/.github/workflows/chaos-simulation-ci.yml
@@ -39,14 +39,16 @@ env:
 
 # Explicit least-privilege permissions for workflow
 # Prevents 403 errors when commenting on PRs
-# permissions: moved to job level
+permissions:
+  contents: read          # Required: Clone repository
+  pull-requests: write    # Required: Comment on PRs
+  issues: write           # Required: Comment on PRs (via issues API)
+  # All other permissions: none (implicit)
 
 jobs:
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     timeout-minutes: 10
 
     steps:
@@ -78,8 +80,6 @@ jobs:
   quick-smoke-test:
     name: Quick Smoke Test
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     timeout-minutes: 5
     needs: unit-tests
 
@@ -113,8 +113,6 @@ jobs:
   dry-run-simulation:
     name: Dry Run Simulation
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     timeout-minutes: 10
     needs: unit-tests
 
@@ -148,10 +146,6 @@ jobs:
   full-chaos-simulation:
     name: Full Chaos Simulation
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-      issues: write
     timeout-minutes: 15
     needs: [unit-tests, quick-smoke-test]
 
@@ -287,8 +281,6 @@ jobs:
   burst-load-test:
     name: Burst Load Test (1000 events)
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     timeout-minutes: 20
     needs: [unit-tests, dry-run-simulation]
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
@@ -342,8 +334,6 @@ jobs:
   determinism-check:
     name: Determinism Verification
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     timeout-minutes: 15
     needs: unit-tests
 
@@ -402,8 +392,6 @@ jobs:
   summary:
     name: Test Summary
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     if: always()
     needs: [unit-tests, quick-smoke-test, dry-run-simulation, full-chaos-simulation, determinism-check]
 
