--- a/orchestrator/Dockerfile
+++ b/orchestrator/Dockerfile
@@ -1,6 +1,6 @@
 # Multi-stage build for APEX Orchestrator
 # Stage 1: Builder - install dependencies
-FROM python:3.11-slim AS builder
+FROM python:3.11-slim as builder
 
 WORKDIR /app
 
