chore(quality): resolve SonarQube duplication, security, and CI workflow issues

--- a/.github/workflows/security-regression-guard.yml
+++ b/.github/workflows/security-regression-guard.yml
@@ -16,14 +16,14 @@ on:
   push:
     branches: [main]
 
-permissions:
-  contents: read
-  security-events: write
+# Job-level permissions (preferred over workflow-level per SonarQube S6770)
 
 jobs:
   security-invariants:
     name: Security Invariant Checks
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout code
@@ -79,6 +79,9 @@ jobs:
   dependency-audit:
     name: Dependency Security Audit
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout code
@@ -114,6 +117,8 @@ jobs:
   code-quality:
     name: Code Quality Gates
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout code
