Revert "chore(quality): resolve SonarQube duplication, security, and CI workf…"
This reverts commit 419021c3660b5752c585ea99575013b327da5272.

--- a/.github/workflows/chaos-simulation-ci.yml
+++ b/.github/workflows/chaos-simulation-ci.yml
@@ -38,16 +38,18 @@ env:
   SANDBOX_TENANT: 'ci-test'
 
 # Explicit least-privilege permissions for workflow
-# Job-level permissions are preferred over workflow-level (SonarQube S6770)
-# See: https://docs.github.com/en/actions/security-for-github-actions/security-hardening-your-deployments/security-hardening-for-github-actions
+# Prevents 403 errors when commenting on PRs
+permissions:
+  contents: read          # Required: Clone repository
+  pull-requests: write    # Required: Comment on PRs
+  issues: write           # Required: Comment on PRs (via issues API)
+  # All other permissions: none (implicit)
 
 jobs:
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout code
@@ -80,8 +82,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     needs: unit-tests
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout code
@@ -115,8 +115,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs: unit-tests
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout code
@@ -150,10 +148,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     needs: [unit-tests, quick-smoke-test]
-    permissions:
-      contents: read
-      pull-requests: write
-      issues: write
 
     strategy:
       fail-fast: false
@@ -290,8 +284,6 @@ jobs:
     timeout-minutes: 20
     needs: [unit-tests, dry-run-simulation]
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout code
@@ -344,8 +336,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     needs: unit-tests
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout code
@@ -404,8 +394,6 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     needs: [unit-tests, quick-smoke-test, dry-run-simulation, full-chaos-simulation, determinism-check]
-    permissions:
-      contents: read
 
     steps:
       - name: Generate summary
