Revert "fix(ci): resolve Playwright test 401 errors and static asset access issues"
This reverts commit 25ed1434c386464e2e6b11a8910b877c8b2cc14e.

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/((?!manifest\\.webmanifest|favicon\\.ico|robots\\.txt|sitemap\\.xml|sw\\.js|assets/|icons/|.*\\.(png|jpg|jpeg|gif|svg|webp|ico|css|js|json|woff|woff2|ttf|eot)).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
