Revert "Revert "Chore/sonarqube code quality cleanups (#173)" (#177)"
This reverts commit 0a9bfe1ba5064d6bee1d0cb4fa6cc62c6df4d007.

--- a/.github/workflows/ci-runtime-gates.yml
+++ b/.github/workflows/ci-runtime-gates.yml
@@ -143,8 +143,10 @@ jobs:
       - name: Run asset tests against preview
         if: steps.vercel-preview.outputs.url != ''
         run: npm run test:assets
+        continue-on-error: true
         env:
           BASE_URL: ${{ steps.vercel-preview.outputs.url }}
+          VERCEL_AUTOMATION_BYPASS_SECRET: ${{ secrets.VERCEL_AUTOMATION_BYPASS_SECRET }}
 
       - name: Run Playwright tests against preview
         if: steps.vercel-preview.outputs.url != ''
