ci: pass vercel password to preview wait

--- a/.github/workflows/ci-runtime-gates.yml
+++ b/.github/workflows/ci-runtime-gates.yml
@@ -138,6 +138,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           max_timeout: 300
           check_interval: 10
+          vercel_password: ${{ secrets.VERCEL_AUTOMATION_BYPASS_SECRET }}
         continue-on-error: true
 
       - name: Run asset tests against preview
