--- a/apps/omnihub-site/.vercelignore
+++ b/apps/omnihub-site/.vercelignore
@@ -1,4 +1,3 @@
-# Deprecated: omni-link-apex deployment disabled
-# This site deployment has been deprecated in favor of the main app
-# To re-enable, remove this file and reconfigure the Vercel project
+# Vercel deployment disabled; keep file to prevent packaging.
 *
+!.vercelignore
