--- a/apps/omnihub-site/vercel.json
+++ b/apps/omnihub-site/vercel.json
@@ -1,9 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "git": {
-    "deploymentEnabled": false
-  },
-  "buildCommand": "echo 'DEPRECATED: omni-link-apex deployment disabled - use main app' && exit 1",
+  "buildCommand": "npm run build",
+  "ignoreCommand": "exit 0",
   "outputDirectory": "dist",
   "framework": "vite",
   "headers": [
@@ -66,7 +64,7 @@
       ]
     },
     {
-      "source": "/favicon.svg",
+      "source": "/apex-omnihub-icon.png",
       "headers": [
         {
           "key": "Cache-Control",
