ci: enforce standardized linting via npm scripts

--- a/.github/workflows/orchestrator-ci.yml
+++ b/.github/workflows/orchestrator-ci.yml
@@ -46,10 +46,8 @@ jobs:
           pip install -e ".[dev]"
 
       - name: Run linters
-        working-directory: orchestrator
         run: |
-          ruff check .
-          black --check .
+          npm run lint:py
 
       - name: Check portability guardrails
         run: |
