Revert "ci: enforce standardized linting via npm scripts"
This reverts commit 1238789ec758d4c2c2774266e2447c33a0e556ef.

--- a/.github/workflows/orchestrator-ci.yml
+++ b/.github/workflows/orchestrator-ci.yml
@@ -46,8 +46,10 @@ jobs:
           pip install -e ".[dev]"
 
       - name: Run linters
+        working-directory: orchestrator
         run: |
-          npm run lint:py
+          ruff check .
+          black --check .
 
       - name: Check portability guardrails
         run: |
