--- a/apps/omnihub-site/package.json
+++ b/apps/omnihub-site/package.json
@@ -30,6 +30,7 @@
     "terser": "^5.44.1",
     "typescript": "^5.8.0",
     "typescript-eslint": "^8.52.0",
-    "vite": "^7.2.0"
+    "vite": "^7.2.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
