docs: add ORCHESTRATOR_URL to env example

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,10 @@ ALCHEMY_WEBHOOK_SIGNING_KEY=your-webhook-signing-key
 VITE_WEB3_NETWORK=polygon
 VITE_ENABLE_WEB3=true
 
+# Orchestrator Configuration
+# URL of the deployed Python Orchestrator service
+ORCHESTRATOR_URL=https://api.apexomnihub.icu
+
 # ==============================================================================
 # OmniDash Admin Configuration
 # ==============================================================================
