OmniEval CI MVP: deterministic eval mode + CI gate
DONE:
- A) npm run eval:ci exists and runs in <2 minutes (136ms)
- B) Produces artifacts/evals/report.json + console summary
- C) CI runs eval gate in ci-runtime-gates.yml
- D) Includes prompt-defense analysis and policy checks
- E) No secrets, no network, no flakiness

Changes:
- New: sim/eval-runner.ts (core evaluation module)
- New: sim/fixtures/evals/golden/*.json (8 golden fixtures)
- New: sim/fixtures/evals/redteam/*.json (8 red-team fixtures)
- Modified: sim/cli.ts (added --mode eval)
- Modified: package.json (added eval:ci script)
- Modified: .github/workflows/ci-runtime-gates.yml (Phase 2.5 eval gate)

Thresholds:
- pass_rate >= 0.95
- policy_violations == 0
- tool_misuse_rate == 0
- must_not_include hits == 0

--- a/.github/workflows/ci-runtime-gates.yml
+++ b/.github/workflows/ci-runtime-gates.yml
@@ -49,6 +49,20 @@ jobs:
           REQUIRE_SUPABASE_INTEGRATION_TESTS: "false"
 
       # ─────────────────────────────────────────────────────────────
+      # PHASE 2.5: OmniEval Deterministic Evaluation
+      # ─────────────────────────────────────────────────────────────
+      - name: Run OmniEval (deterministic eval gate)
+        run: npm run eval:ci
+
+      - name: Upload OmniEval report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: omnieval-report
+          path: artifacts/evals/report.json
+          retention-days: 30
+
+      # ─────────────────────────────────────────────────────────────
       # PHASE 3: Build
       # ─────────────────────────────────────────────────────────────
       - name: Build production bundle
