fix(quality): resolve sonarqube code smells (optional chaining, css duplicates)

--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "vitest": "^4.0.16"
   },
   "overrides": {
-    "lodash": "^4.17.23"
+    "lodash": "^4.17.23",
+    "tar": "^7.4.3"
   }
 }
